--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,7 @@ jobs:
     env:
       HAS_AUTH: ${{ secrets.PLAYWRIGHT_AUTH_STATE != '' }}
       HAS_URL: ${{ secrets.GAS_WEBAPP_URL != '' }}
+      HAS_REMOTE: ${{ secrets.PLAYWRIGHT_AUTH_STATE != '' && secrets.GAS_WEBAPP_URL != '' }}
       GAS_WEBAPP_URL: ${{ secrets.GAS_WEBAPP_URL }}
       E2E_PATH: ${{ vars.E2E_PATH || '?route=AA01' }}
       E2E_TIMEOUT: ${{ vars.E2E_TIMEOUT || '30000' }}
@@ -79,11 +80,11 @@ jobs:
         run: npm run test:a11y:jest
 
       - name: Restore auth state
-        if: ${{ env.HAS_AUTH == 'true' && env.HAS_URL == 'true' }}
+        if: ${{ env.HAS_REMOTE == 'true' }}
         run: echo "${{ secrets.PLAYWRIGHT_AUTH_STATE }}" | base64 -d > auth.json
 
       - name: Remote E2E (staging)
-        if: ${{ env.HAS_AUTH == 'true' && env.HAS_URL == 'true' }}
+        if: ${{ env.HAS_REMOTE == 'true' }}
         run: npm run e2e:remote
         env:
           GAS_WEBAPP_URL: ${{ env.GAS_WEBAPP_URL }}
