--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: ci
+name: CI
 
 on:
   pull_request:
@@ -30,6 +30,9 @@ jobs:
       HUSKY: 0
       GAS_WEBAPP_URL: ${{ secrets.GAS_WEBAPP_URL }}
       PLAYWRIGHT_AUTH_STATE_B64: ${{ secrets.PLAYWRIGHT_AUTH_STATE }}
+      HAS_PLAYWRIGHT_AUTH_STATE: ${{ secrets.PLAYWRIGHT_AUTH_STATE != '' }}
+      HAS_GAS_WEBAPP_URL: ${{ secrets.GAS_WEBAPP_URL != '' }}
+      HAS_REMOTE_TARGET: ${{ secrets.PLAYWRIGHT_AUTH_STATE != '' && secrets.GAS_WEBAPP_URL != '' }}
       E2E_PATH: ${{ vars.E2E_PATH || '?route=AA01' }}
       E2E_TIMEOUT: ${{ vars.E2E_TIMEOUT || '30000' }}
       LOCAL_BASE_URL: ${{ vars.LOCAL_BASE_URL || 'http://127.0.0.1:3000/' }}
@@ -57,11 +60,11 @@ jobs:
       - name: Install Playwright browsers
         run: npx playwright install --with-deps
 
-      - name: UI E2E (local)
+      - name: UI file-mode E2E
         run: npm run e2e:ui
 
       - name: Health check (non-blocking)
-        if: ${{ secrets.GAS_WEBAPP_URL != '' }}
+        if: ${{ env.HAS_GAS_WEBAPP_URL == 'true' }}
         continue-on-error: true
         run: node scripts/health-check.mjs
         env:
@@ -72,15 +75,12 @@ jobs:
       - name: Accessibility scan (pa11y)
         run: npm run test:a11y:pa11y
 
-      - name: Accessibility tests (jest-axe)
-        run: npm run test:a11y:jest
-
       - name: Restore auth state
-        if: ${{ secrets.PLAYWRIGHT_AUTH_STATE != '' && secrets.GAS_WEBAPP_URL != '' }}
+        if: ${{ env.HAS_REMOTE_TARGET == 'true' }}
         run: echo "${{ env.PLAYWRIGHT_AUTH_STATE_B64 }}" | base64 -d > auth.json
 
       - name: Remote E2E (staging)
-        if: ${{ secrets.PLAYWRIGHT_AUTH_STATE != '' && secrets.GAS_WEBAPP_URL != '' }}
+        if: ${{ env.HAS_REMOTE_TARGET == 'true' }}
         run: npm run e2e:remote
         env:
           GAS_WEBAPP_URL: ${{ env.GAS_WEBAPP_URL }}
