--- a/.github/workflows/codex-audit.yml
+++ b/.github/workflows/codex-audit.yml
@@ -14,7 +14,7 @@ concurrency:
 
 jobs:
   audit_part1:
-    if: github.event_name == 'workflow_dispatch' || (github.event_name == 'issue_comment' && github.event.issue.pull_request && contains(github.event.comment.body, '/audit'))
+    if: ${{ github.event_name == 'workflow_dispatch' || (github.event_name == 'issue_comment' && github.event.issue.pull_request && contains(github.event.comment.body, '/audit')) }}
     runs-on: ubuntu-latest
     timeout-minutes: 350
     steps:
@@ -30,7 +30,7 @@ jobs:
       - run: echo "phase: e2e" && (npm run e2e || true)
       - run: echo "phase: build" && npm run build
       - name: Upload part1 artifacts
-        if: always()
+        if: ${{ always() }}
         uses: actions/upload-artifact@v4
         with:
           name: audit-part1
@@ -40,7 +40,7 @@ jobs:
             artifacts/playwright-report/**
           if-no-files-found: ignore
       - name: Comment status
-        if: always()
+        if: ${{ always() }}
         uses: actions/github-script@v7
         with:
           script: |
@@ -63,7 +63,7 @@ jobs:
       - name: Unused files/exports (knip)
         run: npx knip --strict --exports --reporter json > reports/knip.json || true
       - name: Upload part2 artifacts
-        if: always()
+        if: ${{ always() }}
         uses: actions/upload-artifact@v4
         with:
           name: audit-part2
@@ -72,7 +72,7 @@ jobs:
             reports/**
           if-no-files-found: ignore
       - name: Comment status
-        if: always()
+        if: ${{ always() }}
         uses: actions/github-script@v7
         with:
           script: |
