--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,9 +30,9 @@ jobs:
       HUSKY: 0
       GAS_WEBAPP_URL: ${{ secrets.GAS_WEBAPP_URL }}
       PLAYWRIGHT_AUTH_STATE_B64: ${{ secrets.PLAYWRIGHT_AUTH_STATE }}
-      HAS_PLAYWRIGHT_AUTH_STATE: ${{ secrets.PLAYWRIGHT_AUTH_STATE != '' }}
-      HAS_GAS_WEBAPP_URL: ${{ secrets.GAS_WEBAPP_URL != '' }}
-      HAS_REMOTE_TARGET: ${{ secrets.PLAYWRIGHT_AUTH_STATE != '' && secrets.GAS_WEBAPP_URL != '' }}
+      HAS_PLAYWRIGHT_AUTH_STATE: ${{ format('{0}', secrets.PLAYWRIGHT_AUTH_STATE != '') }}
+      HAS_GAS_WEBAPP_URL: ${{ format('{0}', secrets.GAS_WEBAPP_URL != '') }}
+      HAS_REMOTE_TARGET: ${{ format('{0}', secrets.PLAYWRIGHT_AUTH_STATE != '' && secrets.GAS_WEBAPP_URL != '') }}
       E2E_PATH: ${{ vars.E2E_PATH || '?route=AA01' }}
       E2E_TIMEOUT: ${{ vars.E2E_TIMEOUT || '30000' }}
       LOCAL_BASE_URL: ${{ vars.LOCAL_BASE_URL || 'http://127.0.0.1:3000/' }}
@@ -74,6 +74,17 @@ jobs:
 
       - name: Accessibility scan (pa11y)
         run: npm run test:a11y:pa11y
+
+      - name: Remote E2E prerequisites
+        if: ${{ env.HAS_REMOTE_TARGET != 'true' }}
+        run: |
+          echo "Skipping remote E2E."
+          if [[ '${{ env.HAS_PLAYWRIGHT_AUTH_STATE }}' != 'true' ]]; then
+            echo '- Missing PLAYWRIGHT_AUTH_STATE secret.'
+          fi
+          if [[ '${{ env.HAS_GAS_WEBAPP_URL }}' != 'true' ]]; then
+            echo '- Missing GAS_WEBAPP_URL secret.'
+          fi
 
       - name: Restore auth state
         if: ${{ env.HAS_REMOTE_TARGET == 'true' }}
