--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,9 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v4
 
+      - name: Reset CI telemetry buffer
+        run: rm -f reports/ci-step-results.json
+
       - name: Set up Node.js 20
         uses: actions/setup-node@v4
         with:
@@ -52,28 +55,32 @@ jobs:
           HUSKY: '0'
 
       - name: Lint
-        run: npm run lint
+        continue-on-error: true
+        run: node scripts/run-ci-step.mjs --category lint --label "Lint" -- npm run lint
 
       - name: Unit tests
-        run: npm test -- --runInBand
+        continue-on-error: true
+        run: node scripts/run-ci-step.mjs --category unit --label "Unit tests" -- npm test -- --runInBand
 
       - name: Install Playwright browsers
         run: npx playwright install --with-deps
 
       - name: UI file-mode E2E
-        run: npm run e2e:ui
+        continue-on-error: true
+        run: node scripts/run-ci-step.mjs --category ui --label "UI file-mode E2E" -- npm run e2e:ui
 
       - name: Health check (non-blocking)
         if: ${{ env.HAS_GAS_WEBAPP_URL == 'true' }}
         continue-on-error: true
-        run: node scripts/health-check.mjs
+        run: node scripts/run-ci-step.mjs --category health --label "Health check" --non-blocking -- node scripts/health-check.mjs
         env:
           GAS_WEBAPP_URL: ${{ env.GAS_WEBAPP_URL }}
           E2E_PATH: ${{ env.E2E_PATH }}
           E2E_TIMEOUT: ${{ env.E2E_TIMEOUT }}
 
       - name: Accessibility scan (pa11y)
-        run: npm run test:a11y:pa11y
+        continue-on-error: true
+        run: node scripts/run-ci-step.mjs --category a11y --label "Accessibility scan" -- npm run test:a11y:pa11y
 
       - name: Remote E2E prerequisites
         if: ${{ env.HAS_REMOTE_TARGET != 'true' }}
@@ -86,13 +93,19 @@ jobs:
             echo '- Missing GAS_WEBAPP_URL secret.'
           fi
 
+      - name: Record remote E2E skip
+        if: ${{ env.HAS_REMOTE_TARGET != 'true' }}
+        run: |
+          node scripts/run-ci-step.mjs --category remote --label "Remote E2E" --skip "Remote run skipped: missing required secrets"
+
       - name: Restore auth state
         if: ${{ env.HAS_REMOTE_TARGET == 'true' }}
         run: echo "${{ env.PLAYWRIGHT_AUTH_STATE_B64 }}" | base64 -d > auth.json
 
       - name: Remote E2E (staging)
         if: ${{ env.HAS_REMOTE_TARGET == 'true' }}
-        run: npm run e2e:remote
+        continue-on-error: true
+        run: node scripts/run-ci-step.mjs --category remote --label "Remote E2E" -- npm run e2e:remote
         env:
           GAS_WEBAPP_URL: ${{ env.GAS_WEBAPP_URL }}
           E2E_PATH: ${{ env.E2E_PATH }}
@@ -114,3 +127,56 @@ jobs:
           name: health-check-${{ github.job }}
           path: artifacts/health*.json
           if-no-files-found: ignore
+
+      - name: Upload CI step telemetry
+        if: ${{ always() }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: ci-step-results-${{ github.job }}
+          path: reports/ci-step-results.json
+          if-no-files-found: warn
+
+  failure-report:
+    name: Failure report digest
+    needs: quality
+    runs-on: ubuntu-latest
+    if: ${{ always() }}
+    steps:
+      - name: Check out repository
+        uses: actions/checkout@v4
+
+      - name: Download CI telemetry
+        uses: actions/download-artifact@v4
+        continue-on-error: true
+        with:
+          name: ci-step-results-quality
+          path: reports
+
+      - name: Set up Node.js 20
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
+      - name: Generate failure report
+        id: generate
+        run: |
+          node scripts/collect-ci-failures.mjs \
+            --results reports/ci-step-results.json \
+            --report reports/ci-failure-report.md \
+            --template reports/ci-remediation-template.md \
+            --set-output "$GITHUB_OUTPUT"
+
+      - name: Attach report to summary
+        if: ${{ steps.generate.outputs.has_failures == 'true' }}
+        run: cat reports/ci-failure-report.md >> "$GITHUB_STEP_SUMMARY"
+
+      - name: Upload failure report artifact
+        if: ${{ steps.generate.outputs.has_failures == 'true' }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: ci-failure-report
+          path: reports/ci-failure-report.md
+
+      - name: Mark workflow failed when blocking issues remain
+        if: ${{ steps.generate.outputs.has_blocking_failures == 'true' }}
+        run: exit 1
