--- a/.github/workflows/gas-deploy.yml
+++ b/.github/workflows/gas-deploy.yml
@@ -20,39 +20,8 @@ defaults:
     shell: bash {0}
 
 jobs:
-  unit-tests:
+  deploy:
     runs-on: ubuntu-latest
-    timeout-minutes: 15
-
-    steps:
-      - name: "Checkout"
-        uses: actions/checkout@v4
-
-      - name: "Setup Node 20"
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-
-      - name: "Install dependencies"
-        run: npm ci
-        env:
-          HUSKY: '0'
-
-      - name: "Cache Playwright browsers"
-        uses: actions/cache@v4
-        with:
-          path: ~/.cache/ms-playwright
-          key: ${{ runner.os }}-playwright-${{ hashFiles('package-lock.json') }}
-
-      - name: "Install Playwright browsers"
-        run: npx playwright install --with-deps
-
-      - name: "Run unit tests (Jest)"
-        run: npm test --if-present
-
-  test-stage:
-    runs-on: ubuntu-latest
-    needs: [unit-tests]
     timeout-minutes: 25
     env:
       PLAYWRIGHT_AUTH_STATE_B64: ${{ secrets.PLAYWRIGHT_AUTH_STATE }}
@@ -93,9 +62,6 @@ jobs:
           set -euo pipefail
           echo "${PLAYWRIGHT_AUTH_STATE_B64}" | base64 -d > auth.json
           echo "auth.json restored"
-
-      - name: Run local UI E2E
-        run: npm run e2e:ui
 
       - name: Preflight – forbid overriding GAS exec path
         run: |
