--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "eslint --max-warnings=0 --no-error-on-unmatched-pattern --ext .js,.cjs,.mjs,.ts,.tsx src __tests__ playwright scripts",
     "format": "prettier --check .",
-    "typecheck": "tsc --project tsconfig.json --noEmit",
+    "typecheck": "tsc --project tsconfig.test.json --noEmit",
     "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --config=jest.config.cjs",
     "test:watch": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --watch --config=jest.config.cjs",
     "test:playwright": "playwright test",
@@ -16,6 +16,9 @@
     "test:a11y:pa11y": "node scripts/run-pa11y.mjs",
     "test:a11y:jest": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --config=jest.config.cjs --runTestsByPath __tests__/a11y/sidebar-a11y.test.ts",
     "health": "node scripts/health-check.mjs",
+    "audit:deps": "depcheck",
+    "audit:knip": "knip --strict --exports",
+    "diagnose:ci": "node scripts/error-diagnosis.mjs --results reports/ci-step-results.json --output reports/ci-error-diagnosis.md",
     "check": "npm-run-all lint test e2e test:a11y:pa11y test:a11y:jest health",
     "build": "echo \"No build step configured\"",
     "predeploy": "npm run check",
@@ -41,7 +44,6 @@
     "depcheck": "1.4.7",
     "dotenv": "^16.4.7",
     "eslint": "^9.14.0",
-    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jest": "^28.9.0",
     "eslint-plugin-playwright": "^2.2.2",
     "globals": "^15.11.0",
@@ -50,6 +52,7 @@
     "jest": "^30.2.0",
     "jest-axe": "^9.0.0",
     "jest-environment-jsdom": "30.2.0",
+    "knip": "^5.64.1",
     "lint-staged": "^15.2.10",
     "npm-run-all": "^4.1.5",
     "pa11y": "9.0.1",
